--- a/jenkinsfile
+++ b/jenkinsfile
@@ -2,4 +2,9 @@ node{
    stage('SCM Checkout'){
      git 'https://github.com/dileep2018/newproject'
    }
-}
+  stage('sonarqube analysis'){
+       def mvnhome =tool name: 'maven-3', type: 'maven'
+       withSonarQubeEnv('sonar'){
+          sh "${mvnHome}/bin/mvn sonar:sonar"
+        }
+   }
