--- a/jenkinsfile
+++ b/jenkinsfile
@@ -2,6 +2,11 @@ node{
    stage('SCM Checkout'){
      git 'https://github.com/dileep2018/newproject'
    }
+    stage('Compile-test'){
+      // Get maven home path
+      def mvnHome =  tool name: 'maven-3', type: 'maven'   
+      sh "${mvnHome}/bin/mvn test"
+   }      
   stage('sonarqube analysis'){
        def mvnhome =tool name: 'maven-3', type: 'maven'
        withSonarQubeEnv('sonarqube'){
