--- a/jenkinsfile
+++ b/jenkinsfile
@@ -5,9 +5,14 @@ node{
     stage('Compile-test'){
       // Get maven home path
       def mvnHome =  tool name: 'maven-3', type: 'maven'   
-      sh "${mvnHome}/bin/mvn test"
-   }      
-  stage('sonarqube analysis'){
+      sh "${mvnHome}/bin/mvn test    
+    }      	
+     stage('clean-package'){
+       // Get maven home path
+       def mvnHome = tool name: 'maven-3', type: 'maven'
+       sh "${mvnHome}/bin/mvn package"
+   }
+    stage('sonarqube analysis'){
        def mvnhome =tool name: 'maven-3', type: 'maven'
        withSonarQubeEnv('sonarqube') {
        sh "${mvnHome}/bin/mvn sonar:sonar"
