--- a/jenkinsfile
+++ b/jenkinsfile
@@ -2,10 +2,10 @@ node{
    stage('SCM Checkout'){
      git 'https://github.com/dileep2018/newproject'
    }
-    stage('Compile-test'){
+   stage('Compile-test'){
       // Get maven home path
-     def mvnHome =  tool name: 'maven-3', type: 'maven'   
-     sh "${mvnHome}/bin/mvn test    
+      def mvnHome =  tool name: 'maven-3', type: 'maven'   
+      sh "${mvnHome}/bin/mvn test"    
     }      	
      stage('clean-package'){
        // Get maven home path
