--- a/jenkinsfile
+++ b/jenkinsfile
@@ -14,7 +14,7 @@ node{
    }
     stage('sonarqube analysis'){
        def mvnhome =tool name: 'maven-3', type: 'maven'
-       withSonarQubeEnv('sonarqube') {
+       withSonarQubeEnv('sonar') {
        sh "${mvnHome}/bin/mvn sonar:sonar"
        }
    }
