--- a/jenkinsfile
+++ b/jenkinsfile
@@ -13,9 +13,8 @@ node{
        sh "${mvnHome}/bin/mvn package"
    }
     stage('sonarqube analysis'){
-       def mvnhome = tool name: 'maven-3', type: 'maven'
+       def mvnHome = tool name: 'maven-3', type: 'maven'
        withSonarQubeEnv('sonar') {
-         sh "${mvnHome}/bin/mvn sonar:sonar"
+       sh "${mvnHome}/bin/mvn sonar:sonar"
        }
    }
-}
