--- a/jenkinsfile
+++ b/jenkinsfile
@@ -2,20 +2,20 @@ node{
    stage('SCM Checkout'){
      git 'https://github.com/dileep2018/newproject'
    }
-   stage('Compile-test'){
-      // Get maven home path
-      def mvnHome =  tool name: 'maven-3', type: 'maven'   
-      sh "${mvnHome}/bin/mvn test"    
+   stage('sonarqube analysis'){
+       def mvnHome = tool name: 'maven-3', type: 'maven'
+       withSonarQubeEnv('sonar') {
+       sh "${mvnHome}/bin/mvn sonar:sonar
     }      	
      stage('clean-package'){
        // Get maven home path
        def mvnHome = tool name: 'maven-3', type: 'maven'
        sh "${mvnHome}/bin/mvn package"
    }
-    stage('sonarqube analysis'){
-       def mvnHome = tool name: 'maven-3', type: 'maven'
-       withSonarQubeEnv('sonar') {
-       sh "${mvnHome}/bin/mvn sonar:sonar"
+    stage('Compile-test'){
+      // Get maven home path
+      def mvnHome =  tool name: 'maven-3', type: 'maven'   
+      sh "${mvnHome}/bin/mvn test" 
        }
    }
 }
