--- a/jenkinsfile
+++ b/jenkinsfile
@@ -5,7 +5,7 @@ node{
    stage('sonarqube analysis'){
        def mvnHome = tool name: 'maven-3', type: 'maven'
        withSonarQubeEnv('sonar') {
-       sh "${mvnHome}/bin/mvn sonar:sonar
+       sh "${mvnHome}/bin/mvn sonar:sonar"
     }      	
      stage('clean-package'){
        // Get maven home path
