--- a/jenkinsfile
+++ b/jenkinsfile
@@ -3,6 +3,7 @@ node{
      git 'https://github.com/dileep2018/newproject'
    }
    stage('sonarqube analysis'){
+       // Get maven home path
        def mvnHome = tool name: 'maven-3', type: 'maven'
        withSonarQubeEnv('sonar') {
        sh "${mvnHome}/bin/mvn sonar:sonar"
