--- a/jenkinsfile
+++ b/jenkinsfile
@@ -4,19 +4,19 @@ node{
    }
    stage('sonarqube analysis'){
        // Get maven home path
-       def mvnHome = tool name: 'M-3', type: 'maven'
+       def mvnHome = tool name: 'maven-3', type: 'maven'
        withSonarQubeEnv('sonar') {
        sh "${mvnHome}/bin/mvn sonar:sonar"
        }
    }      	
    stage('clean-package'){
        // Get maven home path
-       def mvnHome = tool name: 'M-3', type: 'maven'
+       def mvnHome = tool name: 'maven-3', type: 'maven'
        sh "${mvnHome}/bin/mvn package"
    }
    stage('Compile-test'){
       // Get maven home path
-      def mvnHome = tool name: 'M-3', type: 'maven'   
+      def mvnHome = tool name: 'maven-3', type: 'maven'   
       sh "${mvnHome}/bin/mvn test" 
    }
  }
