--- a/jenkinsfile
+++ b/jenkinsfile
@@ -9,14 +9,14 @@ node{
        sh "${mvnHome}/bin/mvn sonar:sonar"
        }
    }      	
-   stage('clean-package'){
+   stage('Compile-test'){
        // Get maven home path
        def mvnHome = tool name: 'maven-3', type: 'maven'
-       sh "${mvnHome}/bin/mvn package"
+       sh "${mvnHome}/bin/mvn test"
    }
-   stage('Compile-test'){
+   stage('Clean-Package'){
       // Get maven home path
       def mvnHome = tool name: 'maven-3', type: 'maven'   
-      sh "${mvnHome}/bin/mvn test" 
+      sh "${mvnHome}/bin/mvn package" 
    }
  }
