--- a/jenkinsfile
+++ b/jenkinsfile
@@ -19,4 +19,9 @@ node{
       def mvnHome = tool name: 'maven-3', type: 'maven'   
       sh "${mvnHome}/bin/mvn package" 
    }
- }
+   stage('NexusDeploy'){
+       // Get maven home path
+       def mvnHome = tool name: 'maven-3' , type: 'maven'
+       sh "${mvnHome}/bin/mvn deploy"
+   }
+}
