--- a/jenkinsfile
+++ b/jenkinsfile
@@ -30,7 +30,7 @@ node{
    stage('Push to Docker Hub'){
  
 	withCredentials([string(credentialsId: 'mydocker', variable: 'docker')]) {
-        sh "docker login -u dileep -p ${docker}"
+        sh "docker login -u dileepdevops8@gmail.com -p ${docker}"
      }
      sh 'docker build -t dileep/myimage:0.0.1 .'
    }  
