--- a/jenkinsfile
+++ b/jenkinsfile
@@ -1,18 +1,11 @@
 node{
    stage('SCM Checkout'){
-    task 'Checkout'
-    echo 'CheckOut Code'
      git 'https://github.com/dileep2018/newproject'
    }
-   task 'Build'
-   echo 'Building Code'
-   // Get maven home path
-   def mvnHome = tool name: 'maven-3', type: 'maven'
-   sh "${mvnHome}/bin/mvn test"
-   sleep3
-   
-   task 'Functional Testing'
-   echo 'Functional Testing'
-   sleep 3
-   }     
-}        
+   stage('sonarqube analysis'){
+       // Get maven home path
+       def mvnHome = tool name: 'maven-3', type: 'maven'
+       withSonarQubeEnv('sonar') {
+       sh "${mvnHome}/bin/mvn sonar:sonar"
+       }
+   }      	
