--- a/jenkinsfile
+++ b/jenkinsfile
@@ -1,5 +1,9 @@
 node{
    stage('SCM Checkout'){
+   
+     // Checkout task
+     task 'Checkout'
+     echo 'Checkout code'  
      git 'https://github.com/dileep2018/newproject'
    }
    stage('sonarqube analysis'){
