--- a/jenkinsfile
+++ b/jenkinsfile
@@ -5,7 +5,7 @@ node{
    stage('sonarqube analysis'){
        // Get maven home path
        def mvnHome = tool name: 'maven-3', type: 'maven'
-       withSonarQubeEnv('sonar') {
+       withSonarQubeEnv('sonarqube') {
        sh "${mvnHome}/bin/mvn sonar:sonar"
        }
    }      	
