--- a/jenkinsfile
+++ b/jenkinsfile
@@ -7,11 +7,20 @@ node{
        def mvnHome = tool name: 'maven-3', type: 'maven'
        sh "${mvnHome}/bin/mvn test"
    }
+   
+   stage('SonarQube Analysis') {
+        def mvnHome =  tool name: 'maven-3', type: 'maven'
+        withSonarQubeEnv('sonarqube') { 
+          sh "${mvnHome}/bin/mvn sonar:sonar"
+        }
+    }
+   
    stage('Clean-Package'){
       // Get maven home path
       def mvnHome = tool name: 'maven-3', type: 'maven'   
       sh "${mvnHome}/bin/mvn package" 
    }
+   
    stage('NexusDeploy'){
        // Get maven home path
        def mvnHome = tool name: 'maven-3' , type: 'maven'
