--- a/jenkinsfile
+++ b/jenkinsfile
@@ -14,7 +14,15 @@ node{
           sh "${mvnHome}/bin/mvn sonar:sonar"
         }
     }
-   
+    
+    stage("Quality Gate"){
+       timeout(time: 1, unit: 'HOURS') { // Just in case something goes wrong, pipeline will be killed after a timeout
+         def qg = waitForQualityGate() // Reuse taskId previously collected by withSonarQubeEnv
+	 if (qg.status != 'OK') {
+	    error "Pipeline aborted due to quality gate failure: ${qg.status}"
+	 }
+       }   
+   }
    stage('Clean-Package'){
       // Get maven home path
       def mvnHome = tool name: 'maven-3', type: 'maven'   
