--- a/jenkinsfile
+++ b/jenkinsfile
@@ -19,9 +19,12 @@ node{
        timeout(time: 1, unit: 'HOURS') { // Just in case something goes wrong, pipeline will be killed after a timeout
          def qg = waitForQualityGate() // Reuse taskId previously collected by withSonarQubeEnv
 	 if (qg.status != 'OK') {
+	    setBuildStatus ("${context}", "Sonarqube quality gate fail: ${qg.status}", 'FAILURE')
 	    error "Pipeline aborted due to quality gate failure: ${qg.status}"
-	 }
-       }   
+	 } else {  
+	    setBuildStatus ("${context}", "Sonarqube quality gate pass: ${qg.status}", 'SUCCESS')
+         }   
+       }
    }
    stage('Clean-Package'){
       // Get maven home path
