--- a/jenkinsfile
+++ b/jenkinsfile
@@ -16,7 +16,7 @@ node{
     }
     
     stage("Quality Gate"){
-       timeout(time: 1, unit: 'HOURS') { // Just in case something goes wrong, pipeline will be killed after a timeout
+       timeout(time: 1, unit: 'MINUTES') { // Just in case something goes wrong, pipeline will be killed after a timeout
          def qg = waitForQualityGate() // Reuse taskId previously collected by withSonarQubeEnv
 	 if (qg.status != 'OK') {
 	    setBuildStatus ("${context}", "Sonarqube quality gate fail: ${qg.status}", 'FAILURE')
