--- a/jenkinsfile
+++ b/jenkinsfile
@@ -19,28 +19,25 @@ node{
        timeout(time: 1, unit: 'MINUTES') { // Just in case something goes wrong, pipeline will be killed after a timeout
          def qg = waitForQualityGate() // Reuse taskId previously collected by withSonarQubeEnv
 	 if (qg.status != 'OK') {
-	    setBuildStatus ("${context}", "Sonarqube quality gate fail: ${qg.status}", 'FAILURE')
-	    error "Pipeline aborted due to quality gate failure: ${qg.status}"
-	 } else {  
-	    setBuildStatus ("${context}", "Sonarqube quality gate pass: ${qg.status}", 'SUCCESS')
+	   error "Pipeline aborted due to quality gate failure: ${qg.status}
          }   
        }
-   }
-   stage('Clean-Package'){
+    }
+    stage('Clean-Package'){
       // Get maven home path
       def mvnHome = tool name: 'maven-3', type: 'maven'   
       sh "${mvnHome}/bin/mvn package" 
-   }
+    }
    
-   stage('NexusDeploy'){
+    stage('NexusDeploy'){
        // Get maven home path
        def mvnHome = tool name: 'maven-3' , type: 'maven'
        sh "${mvnHome}/bin/mvn deploy"
-   }
-   stage('Build Docker Image'){
+    }
+    stage('Build Docker Image'){
       sh 'docker build -t dileep/myimage:0.0.1 .'
-   }
-   stage('Push to Docker Hub'){
+    }
+    stage('Push to Docker Hub'){
  
 	withCredentials([file(credentialsId: '', variable: 'mydocker')]) {
         sh "docker login -u dileepdevops8@gmail.com -p ${mydocker}"
