--- a/jenkinsfile
+++ b/jenkinsfile
@@ -19,7 +19,7 @@ node{
        timeout(time: 1, unit: 'MINUTES') { // Just in case something goes wrong, pipeline will be killed after a timeout
          def qg = waitForQualityGate() // Reuse taskId previously collected by withSonarQubeEnv
 	 if (qg.status != 'OK') {
-	   error "Pipeline aborted due to quality gate failure: ${qg.status}
+	   error "Pipeline aborted due to quality gate failure: ${qg.status}"
          }   
        }
     }
