--- a/jenkinsfile
+++ b/jenkinsfile
@@ -18,7 +18,7 @@ node{
     stage("Quality Gate"){
        timeout(time: 1, unit: 'MINUTES') { // Just in case something goes wrong, pipeline will be killed after a timeout
          def qg = waitForQualityGate() // Reuse taskId previously collected by withSonarQubeEnv
-	 if (qg.status != 'NO') {
+	  if (qg.status != 'OK') {
 	   error "Pipeline aborted due to quality gate failure: ${qg.status}"
          }   
        }
