--- a/jenkinsfile
+++ b/jenkinsfile
@@ -4,14 +4,14 @@ node ('jenkinsslave') {
    }
    stage('Compile-test'){
        // Get maven home path
-       def mvnHome = tool name: 'maven-3', type: 'maven'
-       sh "${mvnHome}/bin/mvn test"
+       def mvnHome = tool name: 'apache-maven-3.5.4', type: 'maven'
+       sh "${mvnHome}/opt/apache-maven-3.5.4 test"
    }
    
    stage('SonarQube Analysis') {
-        def mvnHome =  tool name: 'maven-3', type: 'maven'
+        def mvnHome =  tool name: 'maven-3.5.4', type: 'maven'
         withSonarQubeEnv('sonarqube') { 
-          sh "${mvnHome}/bin/mvn sonar:sonar"
+          sh "${mvnHome}/opt/apache-maven-3.5.4 sonar:sonar"
         }
     }
     
@@ -26,14 +26,14 @@ node ('jenkinsslave') {
     
     stage('Clean-Package'){
       // Get maven home path
-      def mvnHome = tool name: 'maven-3', type: 'maven'   
-      sh "${mvnHome}/bin/mvn package" 
+      def mvnHome = tool name: 'maven-3.5.4', type: 'maven'   
+      sh "${mvnHome}/opt/maven-3.5.4 package" 
     }
    
     stage('NexusDeploy'){
        // Get maven home path
-       def mvnHome = tool name: 'maven-3' , type: 'maven'
-       sh "${mvnHome}/bin/mvn deploy"
+       def mvnHome = tool name: 'maven-3.5.4' , type: 'maven'
+       sh "${mvnHome}/opt/maven-3.5.4 deploy"
     }
     stage('Build Docker Image'){
       sh 'docker build -t dileep/myimage:0.0.1 .'
