--- a/jenkinsfile
+++ b/jenkinsfile
@@ -4,8 +4,8 @@ node ('jenkinsslave') {
    }
    stage('Compile-test'){
        // Get maven home path
-       def mvnHome = tool name: 'maven-3', type: 'maven'
-       sh "${mvnHome}/opt/apache-maven-3.5.4/mvn test"
+      // def mvnHome = tool name: 'maven-3', type: 'maven'
+       sh "/opt/apache-maven-3.5.4/mvn test"
    }
    
    stage('SonarQube Analysis') {
