--- a/jenkinsfile
+++ b/jenkinsfile
@@ -4,7 +4,7 @@ node ('jenkinsslave') {
    }
    stage('Compile-test'){
        // Get maven home path
-      // def mvnHome = tool name: 'maven-3', type: 'maven'
+      def mvnHome = tool name: 'maven-3', type: 'maven'
        sh "${mvnHome}/opt/apache-maven-3.5.4/mvn test"
    }
    
