--- a/jenkinsfile
+++ b/jenkinsfile
@@ -47,6 +47,6 @@ node('jenkinsslave') {
 	withCredentials([file(credentialsId: '', variable: 'mydocker')]) {
         sh "docker login -u dileepdevops8@gmail.com -p ${mydocker}"
      }
-     sh 'docker build -t dileep/myimage:0.0.1 .'
+     sh 'docker push -t dileep/myimage:0.0.1 .'
    }  
 }
